--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,14 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="maincolor">#EE4D2D</color>
+    <color name="maincolor1">#FFF8F3</color>
+    <color name="color2">#1F1D2B</color>
+    <color name="grey">#B4B4B8</color>
+    <color name="grey1">#F5F5F5</color>
+    <color name="pink">#FFA3A2</color>
+    <color name="color3">#801F1D2B</color>
+    <color name="color4">#6482AD</color>
+    <color name="color5">#FABC3F</color>
+    <color name="color6">#F1F0E8</color>
 </resources>
