--- a/app/src/main/res/layout/activity_tai_khoan.xml
+++ b/app/src/main/res/layout/activity_tai_khoan.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/maincolor1"
     tools:context=".Activity.TaiKhoanActivity">
 
     <LinearLayout
@@ -16,33 +16,38 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:orientation="horizontal"
             android:background="@color/maincolor"
-            >
+            android:orientation="horizontal">
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/ivHA"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
+                android:layout_weight="0"
+                android:scaleType="centerCrop"
                 android:layout_gravity="center"
                 android:layout_marginStart="20dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/avt"
-                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerFull">
-            </com.google.android.material.imageview.ShapeableImageView>
+                android:layout_marginTop="10dp"
+                app:srcCompat="@drawable/doraemon"
+                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerFull" />
 
             <TextView
                 android:id="@+id/tvKhachHang"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="17dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:focusable="true"
+                android:minHeight="48dp"
+                android:padding="10dp"
                 android:text="Đăng nhập/Đăng ký"
                 android:textColor="@color/white"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:textStyle="bold"
-                android:layout_marginStart="20dp">
-            </TextView>
+                android:textSize="18dp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -52,15 +57,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:background="@color/white"
+            android:background="@drawable/background_button_1"
             android:drawableStart="@drawable/edit"
             android:drawablePadding="20dp"
             android:paddingStart="15dp"
             android:text="Thông tin tài khoản"
             android:textAlignment="textStart"
             android:textSize="14dp"
-            android:textStyle="bold">
-        </androidx.appcompat.widget.AppCompatButton>
+            tools:ignore="TextSizeCheck" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnDiaChi"
@@ -70,11 +74,10 @@
             android:paddingStart="15dp"
             android:drawablePadding="20dp"
             android:drawableStart="@drawable/location_1"
-            android:background="@color/white"
             android:textAlignment="textStart"
             style="@android:style/Widget.Button"
-            android:text="Địa chỉ"
-            android:textStyle="bold"/>
+            android:background="@drawable/background_button_1"
+            android:text="Địa chỉ" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnDoiMatKhau"
@@ -86,9 +89,8 @@
             android:textAlignment="textStart"
             android:drawableStart="@drawable/password"
             style="@android:style/Widget.Button"
-            android:background="@color/white"
-            android:text="Đổi mật khẩu"
-            android:textStyle="bold"/>
+            android:background="@drawable/background_button_1"
+            android:text="Đổi mật khẩu" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnDangXuat"
@@ -100,9 +102,8 @@
             android:textSize="16dp"
             android:textStyle="bold"
             android:visibility="gone"
-            android:background="@color/maincolor"
+            android:background="@drawable/background_button"
             android:text="Đăng xuất" />
-
     </LinearLayout>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
